[package]
name = "node_tool"
version = "0.16.4"
edition = "2024"
license = "MIT"
publish = false

[package.metadata.release]
pre-release-replacements = [
    { file = "./CHANGELOG.md", search = "Unreleased", replace = "{{version}}" },
]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
lang_node_common = { path = "../../crates/lang-node-common" }
extism-pdk = { workspace = true }
nodejs_package_json = { workspace = true }
proto_pdk = { workspace = true }
schematic = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
proto_pdk_test_utils = { workspace = true }
serial_test = { workspace = true }
starbase_sandbox = { workspace = true }
tokio = { workspace = true }

[features]
default = ["wasm"]
wasm = []
